# triton_app

./: .gitignore  MANIFEST.in  setup.cfg
tests/: conftest.py  test_board_comment_delete.py  test_board_comment_modify.py  test_board_comment_write.py  test_board_comments_list.py  test_board_delete.py  test_board_list.py  test_board_modify.py  test_board_view.py  test_board_write.py  test_login.py  test_logout.py
triton/: config.yaml  factory.py  main.py  models.py
triton/routes/: __init__.py  board.py
triton/templates/: base.jinja2  board_add.jinja2  board_list.jinja2  board_login.jinja2  board_modify.jinja2  board_view.jinja2
