[metadata]
name = triton
version = 0.0

[options]
packages = find_namespace:
include_package_data = True
install_requires =
    Flask
    SQLAlchemy
    Flask-SQLAlchemy
    Cerberus
    flask-login
    psycopg[binary]
    pyyaml
    formencode

[options.extras_require]
testing =
    pytest
    coverage
    pytest-cov
    lxml
    beautifulsoup4

